--- a/module/application/view/partials/formPesquisa.phtml
+++ b/module/application/view/partials/formPesquisa.phtml
@@ -1,4 +1,5 @@
-  <form class="formulario campos-info" role="form" method="POST" action="#">
+<div class="busca">
+    <form method="POST" action="#">
     <?php foreach ($form->getElements() as $element): ?>
       <p class="b3">
           <label for="<?=$element->getName()?>"><?=$element->getLabel()?> </label>
@@ -11,11 +12,8 @@
           <i class="fas fa-search"></i> Pesquisar
       </button>
 
-      <button type="submit" name="limpar" style="float: right;margin-right: 10px;" value="limpar">
-          <i class="fas fa-times"></i> Limpar
-      </button>
 
     </p>
 
   </form>
-  
+</div>
