--- a/module/dashboard/view/dashboard/categoria/alterar.phtml
+++ b/module/dashboard/view/dashboard/categoria/alterar.phtml
@@ -1,8 +1,8 @@
-    <h1><a href="<?= $this->url('indexCategoria'); ?>">Categorias de dashboard</a> / alterar </h1>
+    <h1><i class="fas fa-bars"></i><a href="<?= $this->url('indexCategoria'); ?>">Categorias de dashboard</a> / alterar </h1>
+    <h2>Alterar categoria de dashboard do cliente <?= $cliente['nome'] ?></h2>
     <div class="conteudo-sistema">
-      <a href="<?= $this->url('novoCategoria'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
+      <a href="<?= $this->url('novoCategoria'); ?>" class="botao" style="float: right;margin-bottom: 10px;"><i class="far fa-plus-square"></i> Novo</a>
       <br>
-      <h2>Alterar categoria de dashboard do cliente <?= $cliente['nome'] ?></h2>
 
       <?php echo $this->partial('form/generic', array('form'=> $formCategoria, 'route'=> '')) ?>
 
