--- a/module/dashboard/view/dashboard/dashboard/index.phtml
+++ b/module/dashboard/view/dashboard/dashboard/index.phtml
@@ -1,13 +1,11 @@
-    <h1>Clientes </h1>
-    <div class="conteudo-sistema">
-      <h2>Pesquisar dashboard</h2>
+    <h1><i class="fas fa-bars"></i>Dashboards </h1>
+    <h2>Dashboards do cliente <?= $cliente['nome'] ?></h2>
      <?php echo $this->partial('form/pesquisa', array('form'=> $formPesquisa, 'route'=> '')) ?>
 
 
 
 
       <div class="bloco-padrao">
-        <h2>Dashboards do cliente <?= $cliente['nome'] ?></h2>
 
         <a href="<?= $this->url('novoDashboard'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
         <br>
@@ -49,6 +47,4 @@
           ?>
       </div>
       
-
-    </div>
 
