--- a/module/invoice/view/invoice/invoice/index.phtml
+++ b/module/invoice/view/invoice/invoice/index.phtml
@@ -1,13 +1,11 @@
-    <h1>Invoices </h1>
-    <div class="conteudo-sistema">
-      <h2>Pesquisar invoices</h2>
+    <h1><i class="fas fa-bars"></i>Invoices </h1>
+    <h2>Invoices do cliente <?= $cliente['nome'] ?></h2>
      <?php echo $this->partial('form/pesquisa', array('form'=> $formPesquisa, 'route'=> '')) ?>
 
 
 
 
       <div class="bloco-padrao">
-        <h2>Invoices do cliente <?= $cliente['nome'] ?></h2>
         <?php if($usuario['id_usuario_tipo'] != 3): ?>
           <a href="<?= $this->url('novoInvoice'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
           <br>
@@ -63,7 +61,6 @@
       </div>
       
 
-    </div>
 
         <script type="text/javascript">
       $(document).ready(function() {
