--- a/module/invoice/view/invoice/invoice/novo.phtml
+++ b/module/invoice/view/invoice/invoice/novo.phtml
@@ -1,7 +1,7 @@
-    <h1><a href="<?= $this->url('indexInvoice'); ?>">Invoices</a> / novo </h1>
+    <h1><i class="fas fa-bars"></i><a href="<?= $this->url('indexInvoice'); ?>">Invoices</a> / novo </h1>
+    <h2>inserir invoice para o cliente <?= $cliente['nome'] ?></h2>
     <div class="conteudo-sistema">
-      <a href="<?= $this->url('novoInvoice'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
-      <h2>inserir invoice para o cliente <?= $cliente['nome'] ?></h2>
+      <a href="<?= $this->url('novoInvoice'); ?>" class="botao" style="float: right;margin-bottom: 10px;"><i class="far fa-plus-square"></i> Novo</a>
       <?php echo $this->partial('form/generic', array('form'=> $formInvoice, 'route'=> ''))  ?>
 
     </div>
