--- a/module/usuario/view/layout/layoutlogin.phtml
+++ b/module/usuario/view/layout/layoutlogin.phtml
@@ -2,6 +2,11 @@
 
 <html lang="en">
   <head>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KX356LG');</script>
       <meta charset="utf-8">
       <meta name="google-signin-client_id" content="119263952091-gdpfe1a4arv7dj1g2f4uia1pf517tk44.apps.googleusercontent.com">
       <?php echo $this->headTitle('Cognitive - '. $this->translate('login'))->setSeparator(' - ')->setAutoEscape(false) ?>
@@ -19,24 +24,191 @@
                       'href' => $this->basePath() . '/img/favicon.ico'
                       )
                   )
-                  ->prependStylesheet($this->basePath() . '/css/style.css');
+                  ->prependStylesheet($this->basePath() . '/css/sistema.css');
       ?>
 
       <!-- Scripts -->
       <?php echo $this->headScript()
+          //->prependFile($this->basePath() . '/js/platform.js')
+          ->prependFile($this->basePath() . '/js/particles.js')
           ->prependFile($this->basePath() . '/js/jquery.maskedinput.min.js')
+          ->prependFile($this->basePath() . '/js/bxslider.js')
           ->prependFile($this->basePath() . '/js/jquery.min.js'); ?>
           
-      <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-      <script src="https://apis.google.com/js/platform.js"></script>
+         <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 
   </head>
   <body>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KX356LG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
+
     <div id="conteiner" class="login">
-      <?= $this->flashMessenger()->render('error', array('alert', 'alert-danger')) ?>   
-      <?= $this->flashMessenger()->render('warning', array('alert',  'alert-warning')) ?>
-      <?= $this->flashMessenger()->render('success', array('alert',  'alert-success')) ?>
-      <?php echo $this->content; ?> 
-    </div>
+        
+<div id="particles-js">
+    
+<canvas class="particles-js-canvas-el" style="width: 100%; height: 100%;" width="1920" height="647"></canvas></div>
+
+
+<div class="bloco-login">
+    <?= $this->flashMessenger()->render('error', array('alert', 'alert-danger')) ?>   
+  <?= $this->flashMessenger()->render('warning', array('alert',  'alert-warning')) ?>
+  <?= $this->flashMessenger()->render('success', array('alert',  'alert-success')) ?>
+  
+    <div class="logo"></div>
+    <?php echo $this->content; ?>
+
+
+
+</div>
+
+<script>
+
+
+    /* ---- particles.js config ---- */
+
+    particlesJS("particles-js", {
+        "particles": {
+            "number": {
+                "value": 25,
+                "density": {
+                    "enable": true,
+                    "value_area": 800
+                }
+            },
+            "color": {
+                "value": "#3BA0EE"
+            },
+            "shape": {
+                "type": "circle",
+                "stroke": {
+                    "width": 5,
+                    "color": "#ffffff"
+                },
+                "polygon": {
+                    "nb_sides": 5
+                },
+                "image": {
+                    "src": "img/github.svg",
+                    "width": 150,
+                    "height": 150
+                }
+            },
+            "opacity": {
+                "value": 1,
+                "random": false,
+                "anim": {
+                    "enable": false,
+                    "speed": 3,
+                    "opacity_min": 0.1,
+                    "sync": false
+                }
+            },
+            "size": {
+                "value": 2,
+                "random": true,
+                "anim": {
+                    "enable": false,
+                    "speed": 40,
+                    "size_min": 0.1,
+                    "sync": false
+                }
+            },
+            "line_linked": {
+                "enable": true,
+                "distance": 500,
+                "color": "#3BA0EE",
+                "opacity": 1,
+                "width": 2
+            },
+            "move": {
+                "enable": true,
+                "speed": 4,
+                "direction": "none",
+                "random": false,
+                "straight": false,
+                "out_mode": "out",
+                "bounce": false,
+                "attract": {
+                    "enable": false,
+                    "rotateX": 600,
+                    "rotateY": 1200
+                }
+            }
+        },
+        "interactivity": {
+            "detect_on": "canvas",
+            "events": {
+                "onhover": {
+                    "enable": true,
+                    "mode": "grab"
+                },
+                "onclick": {
+                    "enable": true,
+                    "mode": "push"
+                },
+                "resize": true
+            },
+            "modes": {
+                "grab": {
+                    "distance": 800,
+                    "line_linked": {
+                        "opacity": 0.5
+                    }
+                },
+                "bubble": {
+                    "distance": 400,
+                    "size": 40,
+                    "duration": 2,
+                    "opacity": 8,
+                    "speed": 3
+                },
+                "repulse": {
+                    "distance": 200,
+                    "duration": 0.4
+                },
+                "push": {
+                    "particles_nb": 4
+                },
+                "remove": {
+                    "particles_nb": 2
+                }
+            }
+        },
+        "retina_detect": true
+    });
+
+
+    /* ---- stats.js config ---- */
+
+    var count_particles, stats, update;
+    stats = new Stats;
+    stats.setMode(0);
+    stats.domElement.style.position = 'absolute';
+    stats.domElement.style.left = '0px';
+    stats.domElement.style.top = '0px';
+    document.body.appendChild(stats.domElement);
+    count_particles = document.querySelector('.js-count-particles');
+    update = function () {
+        stats.begin();
+        stats.end();
+        if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
+            count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
+        }
+        requestAnimationFrame(update);
+    };
+    requestAnimationFrame(update);
+</script>
+
+ 
+
+</div>
+
+
+<iframe id="ssIFrame_google" sandbox="allow-scripts allow-same-origin allow-storage-access-by-user-activation" style="position: absolute; width: 1px; height: 1px; inset: -9999px; display: none;" aria-hidden="true" frame-border="0" src="/iframe.htm"></iframe></body></html>
+
+
+
+
   </body>
 </html>
