--- a/module/usuario/view/usuario/usuario/alterar.phtml
+++ b/module/usuario/view/usuario/usuario/alterar.phtml
@@ -1,8 +1,8 @@
-    <h1><a href="<?= $this->url('usuario'); ?>">Usuários</a> / alterar </h1>
+    <h1><i class="fas fa-bars"></i><a href="<?= $this->url('usuario'); ?>">Usuários</a> / alterar </h1>
+    <h2>Alterar usuário</h2>
     <div class="conteudo-sistema">
       <a href="<?= $this->url('usuarioNovo'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
       <br>
-      <h2>Alterar usuário</h2>
 
       <?php echo $this->partial('form/generic', array('form'=> $formUsuario, 'route'=> '')) ?>
 
