--- a/module/usuario/view/usuario/usuario/index.phtml
+++ b/module/usuario/view/usuario/usuario/index.phtml
@@ -1,13 +1,12 @@
-    <h1>Usuários </h1>
+    <h1><i class="fas fa-bars"></i>Usuários </h1>
+    <h2>Lista de usuários</h2>
     <div class="conteudo-sistema">
-      <h2>Pesquisar usuário</h2>
      <?php echo $this->partial('form/pesquisa', array('form'=> $formPesquisa, 'route'=> '')) ?>
 
 
 
 
       <div class="bloco-padrao">
-        <h2>Usuários</h2>
 
         <a href="<?= $this->url('usuarioNovo'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
         <br>
